--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,1 +1,49 @@
+name: .NET CI
 
+# Controls when the workflow will run
+on:
+  # Triggers the workflow on push and pull request events
+  push:
+    branches: [ main, master ]
+  pull_request:
+    branches: [ main, master ]
+
+# A workflow run is made up of one or more jobs
+jobs:
+  build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v3
+
+    # Setup .NET SDK
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: '8.0.x'  # Specify your .NET version here
+
+    # Restore dependencies
+    - name: Restore dependencies
+      run: dotnet restore
+
+    # Build the project
+    - name: Build
+      run: dotnet build --no-restore --configuration Release
+
+    # Run unit tests
+    - name: Run tests
+      run: dotnet test --no-build --verbosity normal
+
+    # Optional: Create artifact for deployment
+    - name: Publish
+      run: dotnet publish -c Release -o ./publish
+
+    # Optional: Upload build artifacts
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: dotnet-app
+        path: ./publish
